--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+2
   gap: ^2.0.0
   flutter_svg: ^1.0.3
+  fl_chart: ^0.36.2
 
 dev_dependencies:
   bloc_test: ^9.0.3
